[package]
name = "fs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
csv = "1.1.6"
hex = "0.4.3"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
sha2 = "0.10.6"
walkdir = "2.3.2"
